--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,21 +15,20 @@ import { SITE_TITLE, SITE_DESCRIPTION } from '../consts';
 		<main>
 			<h1>🧑‍🚀 Hello, fellow geeks!</h1>
 			<p>
-				Welcome to my blog for documenting and sharing projects I am 
+				Welcome to my blog for documenting and sharing projects I am working on. Most of these are Open Source. 
+				I am working and deploying them. I will share the gotchas for them.
+				I have experience in Windows Servers, AD, Virtual Apps and Desktop, SIEM and AV.
 			</p>
-			<p>Here are a few ideas on how to get started with the template:</p>
+			<p>Here are a some of the few projects</p>
+			<ul>
+			- Jellyfin
+			- Immich
+			- Omni Tools
+			- Grafana
+			- Wazuh
+			</ul>
+
 			
-			<p>
-				Have fun! If you get stuck, remember to <a href="https://docs.astro.build/"
-					>read the docs
-				</a> or <a href="https://astro.build/chat">join us on Discord</a> to ask questions.
-			</p>
-			<p>
-				Looking for a blog template with a bit more personality? Check out <a
-					href="https://github.com/Charca/astro-blog-template"
-					>astro-blog-template
-				</a> by <a href="https://twitter.com/Charca">Maxi Ferreira</a>.
-			</p>
 		</main>
 		<Footer />
 	</body>
